docs/guide/k8s/http-mirroring/netshoot.yml
# 1. deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netshoot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netshoot
  template:
    metadata:
      labels:
        app: netshoot
    spec:
      containers:
      - name: netshoot
        image: nicolaka/netshoot
        imagePullPolicy: IfNotPresent
        command: ["/bin/bash"]
        args: ["-c", "while true; do curl web-service; sleep 0.1;done"]
