docs/guide/k8s/http-mirroring/istio-mirroring.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-mirroring
spec:
  hosts:
  - "nginx"
  http:
  - route:
    - destination:
        host: web-service
        subset: origin
      weight: 100
    mirror:
      host: web-service
      subset: mirroring
    mirrorPercentage:
      value: 100.0

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination-rule
spec:
  host: web-service
  subsets:
  - name: origin
    labels:
      version: nginx
  - name: mirroring
    labels:
      version: mmt-probe
